// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar item defs has a getToolbarItemDefs function that matches snapshots 1`] = `
Object {
  "leftToolbarItemDefs": Array [
    Object {
      "cyData": "select-effective-at",
      "displayLabel": true,
      "dropdownOptions": Array [
        "selectedEffectiveAt",
      ],
      "dropdownText": Array [
        "Unknown",
      ],
      "label": "Effective at",
      "onChange": [MockFunction],
      "rank": 7,
      "tooltip": "Select effective time to display",
      "type": "Dropdown",
      "value": "selectedEffectiveAt",
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-group-column-picker",
      "enumKeysToDisplayStrings": Immutable.Map {
        "depthKm": "Depth (km)",
        "name": "Name",
        "effectiveUntil": "Effective until",
        "longitudeDegrees": "Lon (°)",
        "effectiveAt": "Effective at",
        "type": "Type",
        "latitudeDegrees": "Lat (°)",
        "description": "Description",
        "elevationKm": "Elev (km)",
      },
      "enumOfKeys": Object {
        "depthKm": "depthKm",
        "description": "description",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "type": "type",
      },
      "label": "Channel group columns",
      "menuLabel": "Channel group columns",
      "onChange": [Function],
      "rank": 8,
      "tooltip": "Select columns to be shown in the channel group table below",
      "type": "CheckboxList",
      "values": Immutable.Map {
        "depthKm": true,
        "name": true,
        "effectiveUntil": true,
        "longitudeDegrees": true,
        "effectiveAt": true,
        "type": true,
        "latitudeDegrees": true,
        "description": true,
        "elevationKm": true,
      },
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-column-picker",
      "enumKeysToDisplayStrings": Immutable.Map {
        "orientationVerticalDegrees": "Vert angle (°)",
        "channelInstrumentType": "Instrument type",
        "depthKm": "Depth (km)",
        "calibrationResponseId": "Calib ID",
        "channelDataType": "Data type",
        "channelOrientationType": "Orientation type",
        "calibrationPeriod": "Calib period (s)",
        "name": "Name",
        "calibrationTimeShift": "Calib time shift (s)",
        "verticalDisplacementKm": "Vert displacement (km)",
        "units": "Units",
        "calibrationEffectiveAt": "Calib effective at",
        "fapResponseId": "FAP resp ID",
        "channelBandType": "Band type",
        "orientationHorizontalDegrees": "Horiz angle (°)",
        "eastDisplacementKm": "East displacement (km)",
        "effectiveUntil": "Effective until",
        "longitudeDegrees": "Lon (°)",
        "nominalSampleRateHz": "Sample rate (Hz)",
        "calibrationFactor": "Calib factor (s)",
        "effectiveAt": "Effective at",
        "channelOrientationCode": "Orientation code",
        "calibrationStandardDeviation": "Calib std dev",
        "latitudeDegrees": "Lat (°)",
        "description": "Description",
        "northDisplacementKm": "North displacement (km)",
        "elevationKm": "Elev (km)",
      },
      "enumOfKeys": Object {
        "calibrationEffectiveAt": "calibrationEffectiveAt",
        "calibrationFactor": "calibrationFactor",
        "calibrationPeriod": "calibrationPeriod",
        "calibrationResponseId": "calibrationResponseId",
        "calibrationStandardDeviation": "calibrationStandardDeviation",
        "calibrationTimeShift": "calibrationTimeShift",
        "channelBandType": "channelBandType",
        "channelDataType": "channelDataType",
        "channelInstrumentType": "channelInstrumentType",
        "channelOrientationCode": "channelOrientationCode",
        "channelOrientationType": "channelOrientationType",
        "depthKm": "depthKm",
        "description": "description",
        "eastDisplacementKm": "eastDisplacementKm",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "fapResponseId": "fapResponseId",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "nominalSampleRateHz": "nominalSampleRateHz",
        "northDisplacementKm": "northDisplacementKm",
        "orientationHorizontalDegrees": "orientationHorizontalDegrees",
        "orientationVerticalDegrees": "orientationVerticalDegrees",
        "units": "units",
        "verticalDisplacementKm": "verticalDisplacementKm",
      },
      "label": "Channel columns",
      "menuLabel": "Channel columns",
      "onChange": [Function],
      "rank": 9,
      "tooltip": "Select columns to be shown in the channel table below",
      "type": "CheckboxList",
      "values": Immutable.Map {
        "orientationVerticalDegrees": true,
        "channelInstrumentType": true,
        "depthKm": true,
        "calibrationResponseId": true,
        "channelDataType": true,
        "channelOrientationType": true,
        "calibrationPeriod": true,
        "name": true,
        "calibrationTimeShift": true,
        "verticalDisplacementKm": true,
        "units": true,
        "calibrationEffectiveAt": true,
        "fapResponseId": true,
        "channelBandType": true,
        "orientationHorizontalDegrees": true,
        "eastDisplacementKm": true,
        "effectiveUntil": true,
        "longitudeDegrees": true,
        "nominalSampleRateHz": true,
        "calibrationFactor": true,
        "effectiveAt": true,
        "channelOrientationCode": true,
        "calibrationStandardDeviation": true,
        "latitudeDegrees": true,
        "description": true,
        "northDisplacementKm": true,
        "elevationKm": true,
      },
      "widthPx": 220,
    },
  ],
  "rightToolbarItemDefs": Array [
    Object {
      "ianApp": true,
      "label": "Station",
      "rank": 0,
      "tooltip": "Currently selected station",
      "type": "LabelValue",
      "value": "name",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lat",
      "rank": 2,
      "tooltip": "Station latitude",
      "type": "LabelValue",
      "value": "10.000°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lon",
      "rank": 3,
      "tooltip": "Station longitude",
      "type": "LabelValue",
      "value": "10.000°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Depth",
      "rank": 4,
      "tooltip": "Depth (km)",
      "type": "LabelValue",
      "value": "100.000 km",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Elev",
      "rank": 6,
      "tooltip": "Station elevation",
      "type": "LabelValue",
      "value": "100.000 km",
    },
    Object {
      "ianApp": true,
      "label": "Type",
      "rank": 1,
      "tooltip": "Single station or array",
      "type": "LabelValue",
      "value": "Single Station",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 5,
      "tooltip": "Station description",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
  ],
}
`;

exports[`toolbar item defs has a getToolbarItemDefs function that matches snapshots with empty station 1`] = `
Object {
  "leftToolbarItemDefs": Array [
    Object {
      "cyData": "select-effective-at",
      "displayLabel": true,
      "dropdownOptions": Array [
        "selectedEffectiveAt",
      ],
      "dropdownText": Array [
        "Unknown",
      ],
      "label": "Effective at",
      "onChange": [MockFunction],
      "rank": 7,
      "tooltip": "Select effective time to display",
      "type": "Dropdown",
      "value": "selectedEffectiveAt",
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-group-column-picker",
      "enumKeysToDisplayStrings": Immutable.Map {
        "depthKm": "Depth (km)",
        "name": "Name",
        "effectiveUntil": "Effective until",
        "longitudeDegrees": "Lon (°)",
        "effectiveAt": "Effective at",
        "type": "Type",
        "latitudeDegrees": "Lat (°)",
        "description": "Description",
        "elevationKm": "Elev (km)",
      },
      "enumOfKeys": Object {
        "depthKm": "depthKm",
        "description": "description",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "type": "type",
      },
      "label": "Channel group columns",
      "menuLabel": "Channel group columns",
      "onChange": [Function],
      "rank": 8,
      "tooltip": "Select columns to be shown in the channel group table below",
      "type": "CheckboxList",
      "values": Immutable.Map {
        "depthKm": true,
        "name": true,
        "effectiveUntil": true,
        "longitudeDegrees": true,
        "effectiveAt": true,
        "type": true,
        "latitudeDegrees": true,
        "description": true,
        "elevationKm": true,
      },
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-column-picker",
      "enumKeysToDisplayStrings": Immutable.Map {
        "orientationVerticalDegrees": "Vert angle (°)",
        "channelInstrumentType": "Instrument type",
        "depthKm": "Depth (km)",
        "calibrationResponseId": "Calib ID",
        "channelDataType": "Data type",
        "channelOrientationType": "Orientation type",
        "calibrationPeriod": "Calib period (s)",
        "name": "Name",
        "calibrationTimeShift": "Calib time shift (s)",
        "verticalDisplacementKm": "Vert displacement (km)",
        "units": "Units",
        "calibrationEffectiveAt": "Calib effective at",
        "fapResponseId": "FAP resp ID",
        "channelBandType": "Band type",
        "orientationHorizontalDegrees": "Horiz angle (°)",
        "eastDisplacementKm": "East displacement (km)",
        "effectiveUntil": "Effective until",
        "longitudeDegrees": "Lon (°)",
        "nominalSampleRateHz": "Sample rate (Hz)",
        "calibrationFactor": "Calib factor (s)",
        "effectiveAt": "Effective at",
        "channelOrientationCode": "Orientation code",
        "calibrationStandardDeviation": "Calib std dev",
        "latitudeDegrees": "Lat (°)",
        "description": "Description",
        "northDisplacementKm": "North displacement (km)",
        "elevationKm": "Elev (km)",
      },
      "enumOfKeys": Object {
        "calibrationEffectiveAt": "calibrationEffectiveAt",
        "calibrationFactor": "calibrationFactor",
        "calibrationPeriod": "calibrationPeriod",
        "calibrationResponseId": "calibrationResponseId",
        "calibrationStandardDeviation": "calibrationStandardDeviation",
        "calibrationTimeShift": "calibrationTimeShift",
        "channelBandType": "channelBandType",
        "channelDataType": "channelDataType",
        "channelInstrumentType": "channelInstrumentType",
        "channelOrientationCode": "channelOrientationCode",
        "channelOrientationType": "channelOrientationType",
        "depthKm": "depthKm",
        "description": "description",
        "eastDisplacementKm": "eastDisplacementKm",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "fapResponseId": "fapResponseId",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "nominalSampleRateHz": "nominalSampleRateHz",
        "northDisplacementKm": "northDisplacementKm",
        "orientationHorizontalDegrees": "orientationHorizontalDegrees",
        "orientationVerticalDegrees": "orientationVerticalDegrees",
        "units": "units",
        "verticalDisplacementKm": "verticalDisplacementKm",
      },
      "label": "Channel columns",
      "menuLabel": "Channel columns",
      "onChange": [Function],
      "rank": 9,
      "tooltip": "Select columns to be shown in the channel table below",
      "type": "CheckboxList",
      "values": Immutable.Map {
        "orientationVerticalDegrees": true,
        "channelInstrumentType": true,
        "depthKm": true,
        "calibrationResponseId": true,
        "channelDataType": true,
        "channelOrientationType": true,
        "calibrationPeriod": true,
        "name": true,
        "calibrationTimeShift": true,
        "verticalDisplacementKm": true,
        "units": true,
        "calibrationEffectiveAt": true,
        "fapResponseId": true,
        "channelBandType": true,
        "orientationHorizontalDegrees": true,
        "eastDisplacementKm": true,
        "effectiveUntil": true,
        "longitudeDegrees": true,
        "nominalSampleRateHz": true,
        "calibrationFactor": true,
        "effectiveAt": true,
        "channelOrientationCode": true,
        "calibrationStandardDeviation": true,
        "latitudeDegrees": true,
        "description": true,
        "northDisplacementKm": true,
        "elevationKm": true,
      },
      "widthPx": 220,
    },
  ],
  "rightToolbarItemDefs": Array [
    Object {
      "ianApp": true,
      "label": "Station",
      "rank": 0,
      "tooltip": "Currently selected station",
      "type": "LabelValue",
      "value": "name",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lat",
      "rank": 2,
      "tooltip": "Station latitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lon",
      "rank": 3,
      "tooltip": "Station longitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Depth",
      "rank": 4,
      "tooltip": "Depth (km)",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Elev",
      "rank": 6,
      "tooltip": "Station elevation",
      "type": "LabelValue",
      "value": "Unknown",
    },
    Object {
      "ianApp": true,
      "label": "Type",
      "rank": 1,
      "tooltip": "Single station or array",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 5,
      "tooltip": "Station description",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
  ],
}
`;

exports[`toolbar item defs has a getToolbarItemDefs function that matches snapshots with null station 1`] = `
Object {
  "leftToolbarItemDefs": Array [
    Object {
      "cyData": "select-effective-at",
      "displayLabel": true,
      "dropdownOptions": Array [
        "selectedEffectiveAt",
      ],
      "dropdownText": Array [
        "Unknown",
      ],
      "label": "Effective at",
      "onChange": [MockFunction],
      "rank": 7,
      "tooltip": "Select effective time to display",
      "type": "Dropdown",
      "value": "selectedEffectiveAt",
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-group-column-picker",
      "enumKeysToDisplayStrings": Immutable.Map {
        "depthKm": "Depth (km)",
        "name": "Name",
        "effectiveUntil": "Effective until",
        "longitudeDegrees": "Lon (°)",
        "effectiveAt": "Effective at",
        "type": "Type",
        "latitudeDegrees": "Lat (°)",
        "description": "Description",
        "elevationKm": "Elev (km)",
      },
      "enumOfKeys": Object {
        "depthKm": "depthKm",
        "description": "description",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "type": "type",
      },
      "label": "Channel group columns",
      "menuLabel": "Channel group columns",
      "onChange": [Function],
      "rank": 8,
      "tooltip": "Select columns to be shown in the channel group table below",
      "type": "CheckboxList",
      "values": null,
      "widthPx": 220,
    },
    Object {
      "cyData": "station-properties-channel-column-picker",
      "enumKeysToDisplayStrings": Immutable.Map {
        "orientationVerticalDegrees": "Vert angle (°)",
        "channelInstrumentType": "Instrument type",
        "depthKm": "Depth (km)",
        "calibrationResponseId": "Calib ID",
        "channelDataType": "Data type",
        "channelOrientationType": "Orientation type",
        "calibrationPeriod": "Calib period (s)",
        "name": "Name",
        "calibrationTimeShift": "Calib time shift (s)",
        "verticalDisplacementKm": "Vert displacement (km)",
        "units": "Units",
        "calibrationEffectiveAt": "Calib effective at",
        "fapResponseId": "FAP resp ID",
        "channelBandType": "Band type",
        "orientationHorizontalDegrees": "Horiz angle (°)",
        "eastDisplacementKm": "East displacement (km)",
        "effectiveUntil": "Effective until",
        "longitudeDegrees": "Lon (°)",
        "nominalSampleRateHz": "Sample rate (Hz)",
        "calibrationFactor": "Calib factor (s)",
        "effectiveAt": "Effective at",
        "channelOrientationCode": "Orientation code",
        "calibrationStandardDeviation": "Calib std dev",
        "latitudeDegrees": "Lat (°)",
        "description": "Description",
        "northDisplacementKm": "North displacement (km)",
        "elevationKm": "Elev (km)",
      },
      "enumOfKeys": Object {
        "calibrationEffectiveAt": "calibrationEffectiveAt",
        "calibrationFactor": "calibrationFactor",
        "calibrationPeriod": "calibrationPeriod",
        "calibrationResponseId": "calibrationResponseId",
        "calibrationStandardDeviation": "calibrationStandardDeviation",
        "calibrationTimeShift": "calibrationTimeShift",
        "channelBandType": "channelBandType",
        "channelDataType": "channelDataType",
        "channelInstrumentType": "channelInstrumentType",
        "channelOrientationCode": "channelOrientationCode",
        "channelOrientationType": "channelOrientationType",
        "depthKm": "depthKm",
        "description": "description",
        "eastDisplacementKm": "eastDisplacementKm",
        "effectiveAt": "effectiveAt",
        "effectiveUntil": "effectiveUntil",
        "elevationKm": "elevationKm",
        "fapResponseId": "fapResponseId",
        "latitudeDegrees": "latitudeDegrees",
        "longitudeDegrees": "longitudeDegrees",
        "name": "name",
        "nominalSampleRateHz": "nominalSampleRateHz",
        "northDisplacementKm": "northDisplacementKm",
        "orientationHorizontalDegrees": "orientationHorizontalDegrees",
        "orientationVerticalDegrees": "orientationVerticalDegrees",
        "units": "units",
        "verticalDisplacementKm": "verticalDisplacementKm",
      },
      "label": "Channel columns",
      "menuLabel": "Channel columns",
      "onChange": [Function],
      "rank": 9,
      "tooltip": "Select columns to be shown in the channel table below",
      "type": "CheckboxList",
      "values": null,
      "widthPx": 220,
    },
  ],
  "rightToolbarItemDefs": Array [
    Object {
      "ianApp": true,
      "label": "Station",
      "rank": 0,
      "tooltip": "Currently selected station",
      "type": "LabelValue",
      "value": null,
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lat",
      "rank": 2,
      "tooltip": "Station latitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Lon",
      "rank": 3,
      "tooltip": "Station longitude",
      "type": "LabelValue",
      "value": "Unknown°",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Depth",
      "rank": 4,
      "tooltip": "Depth (km)",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Elev",
      "rank": 6,
      "tooltip": "Station elevation",
      "type": "LabelValue",
      "value": "Unknown",
    },
    Object {
      "ianApp": true,
      "label": "Type",
      "rank": 1,
      "tooltip": "Single station or array",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
    Object {
      "ianApp": true,
      "label": "Description",
      "rank": 5,
      "tooltip": "Station description",
      "type": "LabelValue",
      "value": "Unknown",
      "widthPx": 400,
    },
  ],
}
`;
